--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "firebase": "^5.5.4",
+    "html-react-parser": "^0.4.7",
     "jquery": "^3.3.1",
     "ms": "^2.1.1",
     "react": "^16.5.2",
