--- a/package.json
+++ b/package.json
@@ -33,5 +33,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage": "http://ayh.io/scribe-viewer"
+  "homepage": "https://view.getscribe.io"
 }
