add textarea css, add yarn command

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "css": "sass src/App.scss src/App.css",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
